# portal-solana-port

evm/: IPortal.sol  IPortalFactory.sol  Portal.sol  PortalFactory.sol
solana/: .env  .gitignore  Anchor.toml  Cargo.toml  README.md  lifi.json  package.json  solana.txt  tsconfig.json  txtx.yml  vitest.config.ts
solana/idls/: across.json  relay_depository.json
solana/migrations/: deploy.ts
solana/programs/curvy-portal/: Cargo.toml
solana/programs/curvy-portal/src/: across_bridge.rs  error.rs  events.rs  lib.rs  recovery.rs  seeds.rs  state.rs
solana/programs/curvy-portal/src/instructions/: bridge_across_sol.rs  bridge_across_spl.rs  bridge_relay_sol.rs  bridge_relay_spl.rs  create_and_bridge_sol.rs  create_and_bridge_spl.rs  create_stealth_sol.rs  create_stealth_spl_ata.rs  initialize.rs  mod.rs  pause.rs  recover_sol.rs  recover_spl.rs  update_config.rs
solana/runbooks/: README.md
solana/runbooks/deployment/: main.tx  subgraphs.localnet.tx
solana/tests/: curvy-portal.ts  recovery_helpers.ts
solana/tests/fixtures/: lifi_relay_usdc_advanced_routes.json
