[package]
name = "curvy-portal"
version = "0.1.0"
description = "Curvy Portal - Solana entry bridge to Arbitrum via LiFi"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "curvy_portal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
libsecp256k1 = { version = "0.7", default-features = false }
solana-program = "2"
